# chatisp-backend

./: .dockerignore  .env.example  .env.production  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt  start.sh
alembic/: env.py
alembic/versions/: .gitkeep  001_init_auth.py
app/: __init__.py  main.py
app/api/: __init__.py  dependencies.py
app/api/endpoints/: __init__.py  admin.py  auth.py  conversations.py  health.py  messages.py
app/core/: __init__.py  config.py  database.py  logging.py  security.py
app/models/: __init__.py  conversation.py  message.py  user.py
app/rag/: __init__.py  llm_engine.py  prompts.py  streaming.py  vector_store.py
app/schemas/: __init__.py  auth.py  conversation.py  message.py  user.py
app/services/: __init__.py  conversation_service.py  message_service.py  rag_service.py  rag_singleton.py  user_service.py
app/utils/: __init__.py  cache.py  rate_limiter.py  sse.py  text_processors.py  title_generator.py  token_counter.py
scripts/: __init__.py  chat_with_rag.py  delete_user_conversations.py  generate_user_conversations.py  generate_user_data.py  health_check.py  ingest.py  load_test.py  make_admin.py  reset_password.py  test_admin.py  test_backend.py  test_query.py  test_rag_pipeline.py
tests/: __init__.py  conftest.py  test_conversations.py  test_health.py  test_messages.py  test_rag.py
