[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatisp-backend"
version = "1.0.0"
description = "Backend for ChatISP AI, a general-purpose AI assistant"
authors = [{name = "MBILIZI WABENGA DEMBI", email = "mbiliziwabengadembi@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.1",
    "pydantic-settings==2.3.4",
    "python-dotenv==1.0.0",
    "sqlalchemy==2.0.31",
    "aiosqlite==0.20.0",
    "chromadb==0.5.0",
    "sentence-transformers==3.0.1",
    "groq==0.9.0",
    "structlog==24.2.0",
    "python-json-logger==2.0.7",
    "httpx==0.27.0",
    "python-multipart==0.0.9",
    "langchain==0.3.0",
    "langchain-community==0.3.0",
    "pypdf==4.2.0",
    "rank-bm25==0.2.2",
    "alembic==1.13.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.2",
    "pytest-asyncio==0.23.7",
    "pytest-cov==5.0.0",
    "asgi-lifespan==2.1.0",
    "black==24.8.0",
    "isort==5.13.2",
    "mypy==1.11.2",
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true